Generalize PagerDuty email

--- a/.env-template
+++ b/.env-template
@@ -11,3 +11,4 @@ SLACK_CHANNEL=some-alert-channel
 SLACK_URL=https://hooks.slack.com/services/XXX/XXX/XXXXXXXXXX
 PD_KEY=XXXXXXXXX
 PD_SERVICE=XXXXXXXXX
+PD_EMAIL=XXX@XXX.XX
