--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "2.25.3",
     "moment-timezone": "0.5.28",
     "node-pagerduty": "1.2.0",
+    "web-request": "1.0.7",
     "web3": "1.2.4"
   },
   "devDependencies": {
