--- a/.env-template
+++ b/.env-template
@@ -1,9 +1,28 @@
+# Full node to use for monitoring
 RPC_URL='http://localhost:8545'
+
+# Monitor frequency (in seconds)
+CHECK_INTERVAL=60
+
+# Addresses to monitor
 ADDRESS_FILE='addresses.mainnet.yaml'
+
+# Port for internal monitor service, need not be exposed internally
 PORT=8080
+
+# Warn (via discord) when missed signatures exceed this level.
+# 0.05 = 5%
 MISSED_SIGNATURE_WARN_PCT=0.05
+
+# Page (via discord + pagerduty [not tested] when missed signatures exceed this level.
+# 0.05 = 5%
 MISSED_SIGNATURE_PAGE_PCT=0.05
-PD_API_KEY='<sdlfjslkdfjlskdjfl>''
+
+# Pagerduty functionality is implemented but unmaintained
+PD_API_KEY='PAGERDUTY_NOT_TESTED'
 PD_SOURCE_DESCRIPTOR='CELO_MAINNET'
 PD_EVENTS_ROUTING_KEY=0123456789
-DISCORD_WEBHOOK_URL="FIXME"
+
+# Webhook for your Discord server / channel
+# Notifications from monitor will be sent here
+DISCORD_WEBHOOK_URL="YOUR_DISCORD_WEBHOOK"
