use docker-compose to create stack that includes light full node and monitoring rig

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,3 @@
-#FROM node:12-buster as base
 FROM node:12-bullseye as base
 FROM base as builder
 
@@ -8,10 +7,10 @@ RUN apt-get update && \
 WORKDIR /opt/monitor
 
 RUN mkdir -p /opt/monitor/
-ADD package.json yarn.lock .snyk VERSION /opt/monitor/ 
+ADD ../package.json ../yarn.lock ../.snyk ../VERSION /opt/monitor/ 
 RUN yarn
 
-ADD . /opt/monitor/
+ADD .. /opt/monitor/
 RUN yarn build
 
 RUN rm -rf node_modules
@@ -19,15 +18,11 @@ RUN yarn install --production
 
 FROM base
 
-#ENV ENV_FILE .env-template
-
 WORKDIR /opt/monitor
-COPY --from=builder /opt/monitor/.env-template /opt/monitor/
+COPY --from=builder /opt/monitor/env-template /opt/monitor/
 COPY --from=builder /opt/monitor/build /opt/monitor/
 COPY --from=builder /opt/monitor/package.json /opt/monitor/package.json
 COPY --from=builder /opt/monitor/node_modules /opt/monitor/node_modules
 COPY --from=builder /opt/monitor/wrapper.sh /opt/monitor/wrapper.sh
 
-#CMD ["yarn", "start"]
-#CMD ["wrapper.sh"]
 ENTRYPOINT exec /opt/monitor/wrapper.sh
