--- a/template.env
+++ b/template.env
@@ -43,4 +43,5 @@ PD_EVENTS_ROUTING_KEY=0123456789
 
 # Webhook for your Discord server / channel
 # Notifications from monitor will be sent here
-DISCORD_WEBHOOK_URL="YOUR_DISCORD_WEBHOOK"
+# Update this with *your* discord webhook
+DISCORD_WEBHOOK_URL="https://enkev53fu7epk.x.pipedream.net"
