--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "celo-network-monitor",
+  "description": "Tool for monitoring Celo validators and alerting to Discord",
   "version": "0.0.3",
   "SPDX-License-Identifier": "BlueOak-1.0.0",
+  "license": "BlueOak-1.0.0",
   "scripts": {
     "build": "npx tsc -p .",
     "postbuild": "copyfiles *.yaml build/",
@@ -18,7 +20,7 @@
   },
   "dependencies": {
     "@celo/celocli": "1.3.0",
-    "@celo/contractkit": "1.2.0",
+    "@celo/contractkit": "1.3.3",
     "@pagerduty/pdjs": "2.2.2",
     "bignumber.js": "9.0.1",
     "discord-webhook-node": "1.1.8",
