use local full node by default

--- a/template.env
+++ b/template.env
@@ -2,18 +2,18 @@
 # Full node to use for monitoring
 # 
 # uncomment this if you use docker-compose to deploy the stack
-#RPC_URL='http://localhost:8545'
+RPC_URL='http://localhost:8545'
 #
 # Else these public full nodes can be used instead (with no SLA)
 # mainnet
-RPC_URL='https://forno.celo.org:443'
+#RPC_URL='https://forno.celo.org:443'
 #
 # baklava testnet
 #RPC_URL='https://baklava-forno.celo-testnet.org:443'
 ####################################################################
 
 # Addresses to monitor
-ADDRESS_FILE='addresses.mainnet.yaml'
+ADDRESS_FILE='template-addresses.mainnet.yaml'
 
 # Monitor frequency (in seconds)
 CHECK_INTERVAL=60
