dockerize localhost for RPC full node

--- a/template.env
+++ b/template.env
@@ -2,7 +2,8 @@
 # Full node to use for monitoring
 # 
 # uncomment this if you use docker-compose to deploy the stack
-RPC_URL='http://localhost:8545'
+RPC_URL='http://celo-full-node:8545'
+
 #
 # Else these public full nodes can be used instead (with no SLA)
 # mainnet
