unified docker-compose.yml for mainnet and baklava monitoring.

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,5 @@ addresses.baklava.yaml
 yarn.lock
 docker/mainnet/full-node-data/celo
 docker/mainnet/full-node-data/keystore
-
+docker/baklava/full-node-data/baklava
 
