docker image weight loss program [wip]

--- a/mainnet.env
+++ b/mainnet.env
@@ -14,7 +14,7 @@ RPC_URL='http://celo-full-node:8545'
 ####################################################################
 
 # Addresses to monitor
-ADDRESS_FILE='template-addresses.mainnet.yaml'
+ADDRESS_FILE='addresses.mainnet.yaml'
 
 # Monitor frequency (in seconds)
 CHECK_INTERVAL=60
