--- a/docker/Dockerfile.bitnami
+++ b/docker/Dockerfile.bitnami
@@ -1,26 +1,13 @@
-#FROM node:12-bullseye as base
-#FROM base as builder
-FROM bitnami/node:12 AS builder
-
+FROM bitnami/node:12 as builder
+ENV NODE_ENV="production"
 RUN install_packages libudev-dev libusb-1.0-0-dev build-essential python3 make g++ gcc
-
+COPY . /opt/monitor/ 
 WORKDIR /opt/monitor
+RUN yarn && yarn build && yarn install --production
 
-RUN mkdir -p /opt/monitor/
-ADD package.json yarn.lock .snyk VERSION /opt/monitor/ 
-RUN yarn
-
-ADD . /opt/monitor/
-RUN yarn build
-
-RUN rm -rf node_modules
-RUN yarn install --production
-
-#FROM base
 FROM bitnami/node:12-prod
-
-WORKDIR /opt/monitor
+ENV NODE_ENV="production"
 COPY --from=builder /opt/monitor/build /opt/monitor/package.json /opt/monitor/node_modules /opt/monitor/wrapper.sh /opt/monitor/
-
+WORKDIR /opt/monitor
 ENTRYPOINT exec /opt/monitor/wrapper.sh
 
