--- a/mainnet.env
+++ b/mainnet.env
@@ -7,14 +7,15 @@ RPC_URL='http://celo-full-node:8545'
 #
 # Else these public full nodes can be used instead (with no SLA)
 # mainnet
-#RPC_URL='https://forno.celo.org:443'
+#RPC_URL=https://forno.celo.org:443
 #
 # baklava testnet
 #RPC_URL='https://baklava-forno.celo-testnet.org:443'
 ####################################################################
 
 # Addresses to monitor
-ADDRESS_FILE='addresses.mainnet.yaml'
+ADDRESS_FILE=addresses.mainnet.yaml
+#ADDRESS_FILE='template-addresses.mainnet.yaml'
 
 # Monitor frequency (in seconds)
 CHECK_INTERVAL=60
