--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@pagerduty/pdjs": "2.2.2",
     "bignumber.js": "9.0.1",
     "discord-webhook-node": "1.1.8",
+    "dotenv": "10.0.0",
     "js-yaml": "4.1.0",
     "moment": "2.29.1",
     "moment-timezone": "0.5.33",
     "web-request": "1.0.7",
     "web3": "1.3.6",
-    "dotenv": "10.0.0"
+    "yarn": "1.22.17"
   },
   "devDependencies": {
     "@types/mocha": "8.2.2",
