verbose output only in debug mode

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,5 @@
 FROM bitnami/node:12 AS builder
+#ENV NODE_ENV="production"
 
 RUN install_packages libudev-dev libusb-1.0-0-dev build-essential python3 make g++ gcc
 
@@ -12,6 +13,7 @@ ADD . /opt/monitor/
 RUN yarn build && rm -rf node_modules && yarn install --production
 
 FROM bitnami/node:12-prod
+ENV NODE_ENV="production"
 
 WORKDIR /opt/monitor
 COPY --from=builder /opt/monitor/build /opt/monitor/
