--- a/mainnet.env
+++ b/mainnet.env
@@ -2,12 +2,12 @@
 # Full node to use for monitoring
 # 
 # uncomment this if you use docker-compose to deploy the stack
-RPC_URL='http://celo-full-node:8545'
+#RPC_URL='http://celo-full-node:8545'
 
 #
 # Else these public full nodes can be used instead (with no SLA)
 # mainnet
-#RPC_URL=https://forno.celo.org:443
+RPC_URL=https://forno.celo.org:443
 #
 # baklava testnet
 #RPC_URL='https://baklava-forno.celo-testnet.org:443'
@@ -47,3 +47,6 @@ PD_EVENTS_ROUTING_KEY=0123456789
 # Notifications from monitor will be sent here
 # Update this with *your* discord webhook
 DISCORD_WEBHOOK_URL="https://enkev53fu7epk.x.pipedream.net"
+
+DEBUG=false
+#DEBUG=true
