--- a/baklava.env
+++ b/baklava.env
@@ -2,8 +2,7 @@
 # Full node to use for monitoring
 # 
 # uncomment one of these if you use docker-compose to deploy the stack
-#RPC_URL='http://celo-full-node:8545'
-RPC_URL='http://celo-baklava-full-node:8545'
+RPC_URL=http://celo-baklava-full-node:8545
 
 #
 # Else these public full nodes can be used instead (with no SLA)
@@ -16,7 +15,7 @@ RPC_URL='http://celo-baklava-full-node:8545'
 
 # Addresses to monitor
 #ADDRESS_FILE='template-addresses.mainnet.yaml'
-ADDRESS_FILE='template-addresses.baklava.yaml'
+ADDRESS_FILE=addresses.baklava.yaml
 
 # Monitor frequency (in seconds)
 CHECK_INTERVAL=60
@@ -48,3 +47,6 @@ PD_EVENTS_ROUTING_KEY=0123456789
 # Notifications from monitor will be sent here
 # Update this with *your* discord webhook
 DISCORD_WEBHOOK_URL="https://enkev53fu7epk.x.pipedream.net"
+
+#DEBUG=true
+DEBUG=false
