--- a/mainnet.env
+++ b/mainnet.env
@@ -2,12 +2,12 @@
 # Full node to use for monitoring
 # 
 # uncomment this if you use docker-compose to deploy the stack
-#RPC_URL='http://celo-full-node:8545'
+RPC_URL=http://celo-full-node:8545
 
 #
 # Else these public full nodes can be used instead (with no SLA)
 # mainnet
-RPC_URL=https://forno.celo.org:443
+#RPC_URL=https://forno.celo.org:443
 #
 # baklava testnet
 #RPC_URL='https://baklava-forno.celo-testnet.org:443'
