updating dependencies and fixing a bug in the governance monitor that was reporting wrong times for proposal milestones. tested on node 14 as node 12 is now EOL.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ docker/mainnet/full-node-data/celo
 docker/mainnet/full-node-data/keystore
 docker/baklava/full-node-data/baklava
 package-lock.json
+.env
