--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "celo-network-monitor",
   "description": "Tool for monitoring Celo validators and alerting to Discord",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "license": "MIT",
   "scripts": {
     "build": "npx tsc -p .",
@@ -11,8 +11,9 @@
     "eslint": "npx eslint src/*.ts src/monitor/*.ts",
     "prettier": "prettier --write src/*.ts src/monitor/*.ts",
     "test": "ts-mocha -p tsconfig.json src/**/*.test.ts --exit",
-    "snyk-protect": "snyk protect",
-    "prepare": "yarn run snyk-protect"
+    "prepare": "yarn run snyk-protect",
+    "snyk-protect": "snyk-protect"
+    
   },
   "_moduleAliases": {
     "~": "src"
@@ -27,9 +28,9 @@
     "js-yaml": "4.1.0",
     "moment": "2.29.1",
     "moment-timezone": "0.5.33",
+    "yarn": "1.22.19",
     "web-request": "1.0.7",
-    "web3": "1.3.6",
-    "yarn": "1.22.17"
+    "web3": "1.3.6"
   },
   "devDependencies": {
     "@types/mocha": "8.2.2",
@@ -45,7 +46,7 @@
     "eslint-plugin-promise": "5.1.0",
     "mocha": "8.4.0",
     "prettier": "2.3.1",
-    "snyk": "1.631.0",
+    "@snyk/protect": "^1.657.0",
     "ts-mocha": "8.0.0",
     "ts-node-dev": "1.1.6",
     "ts-sinon": "2.0.1",
