--- a/package.json
+++ b/package.json
@@ -19,37 +19,37 @@
     "~": "src"
   },
   "dependencies": {
-    "@celo/celocli": "1.3.0",
-    "@celo/contractkit": "1.3.3",
-    "@pagerduty/pdjs": "2.2.2",
+    "@celo/celocli": "1.7.4",
+    "@celo/contractkit": "3.0.1",
+    "@pagerduty/pdjs": "2.2.4",
     "bignumber.js": "9.0.1",
     "discord-webhook-node": "1.1.8",
-    "dotenv": "10.0.0",
+    "dotenv": "16.0.3",
     "js-yaml": "4.1.0",
-    "moment": "2.29.1",
-    "moment-timezone": "0.5.33",
+    "moment": "2.29.4",
+    "moment-timezone": "0.5.40",
     "yarn": "1.22.19",
     "web-request": "1.0.7",
     "web3": "1.3.6"
   },
   "devDependencies": {
-    "@types/mocha": "8.2.2",
-    "@types/node": "15.12.2",
-    "@typescript-eslint/eslint-plugin": "4.27.0",
-    "@typescript-eslint/parser": "4.27.0",
+    "@types/mocha": "10.0.1",
+    "@types/node": "18.11.18",
+    "@typescript-eslint/eslint-plugin": "5.48.0",
+    "@typescript-eslint/parser": "5.48.0",
     "copyfiles": "2.4.1",
-    "eslint": "7.28.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-config-standard": "16.0.3",
-    "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "5.1.0",
-    "mocha": "8.4.0",
-    "prettier": "2.3.1",
+    "eslint": "8.31.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-config-standard": "17.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-n": "15.6.0",
+    "eslint-plugin-promise": "6.1.1",
+    "mocha": "10.2.0",
+    "prettier": "2.8.2",
     "@snyk/protect": "^1.657.0",
-    "ts-mocha": "8.0.0",
-    "ts-node-dev": "1.1.6",
-    "ts-sinon": "2.0.1",
-    "typescript": "4.3.2"
+    "ts-mocha": "10.0.0",
+    "ts-node-dev": "2.0.0",
+    "ts-sinon": "2.0.2",
+    "typescript": "4.9.4"
   }
 }
