--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ docker/mainnet/full-node-data/keystore
 docker/baklava/full-node-data/baklava
 package-lock.json
 .env
+mainnet.env
+private/
+*.code-workspace
+
