--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "celo-network-monitor",
   "description": "Tool for monitoring Celo validators and alerting to Discord",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "license": "MIT",
   "scripts": {
     "build": "npx tsc -p .",
@@ -13,43 +13,43 @@
     "test": "ts-mocha -p tsconfig.json src/**/*.test.ts --exit",
     "prepare": "yarn run snyk-protect",
     "snyk-protect": "snyk-protect"
-    
   },
   "_moduleAliases": {
     "~": "src"
   },
   "dependencies": {
-    "@celo/celocli": "1.7.4",
-    "@celo/contractkit": "3.0.1",
-    "@pagerduty/pdjs": "2.2.4",
-    "bignumber.js": "9.0.1",
-    "discord-webhook-node": "1.1.8",
-    "dotenv": "16.0.3",
-    "js-yaml": "4.1.0",
-    "moment": "2.29.4",
-    "moment-timezone": "0.5.40",
-    "yarn": "1.22.19",
-    "web-request": "1.0.7",
-    "web3": "1.3.6"
+    "@celo/celocli": "^3.0.2",
+    "@celo/contractkit": "^5.1.0",
+    "@pagerduty/pdjs": "^2.2.4",
+    "bignumber.js": "^9.1.2",
+    "discord-webhook-node": "^1.1.8",
+    "dotenv": "^16.3.1",
+    "js-yaml": "^4.1.0",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
+    "web-request": "^1.0.7",
+    "web3": "^4.2.2",
+    "web3-eth-110": "npm:web3-eth@1.10.0",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
-    "@types/mocha": "10.0.1",
-    "@types/node": "18.11.18",
-    "@typescript-eslint/eslint-plugin": "5.48.0",
-    "@typescript-eslint/parser": "5.48.0",
-    "copyfiles": "2.4.1",
-    "eslint": "8.31.0",
-    "eslint-config-prettier": "8.6.0",
-    "eslint-config-standard": "17.0.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-n": "15.6.0",
-    "eslint-plugin-promise": "6.1.1",
-    "mocha": "10.2.0",
-    "prettier": "2.8.2",
-    "@snyk/protect": "^1.657.0",
-    "ts-mocha": "10.0.0",
-    "ts-node-dev": "2.0.0",
-    "ts-sinon": "2.0.2",
-    "typescript": "4.9.4"
+    "@types/mocha": "^10.0.4",
+    "@types/node": "^20.9.1",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "copyfiles": "^2.4.1",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "mocha": "^10.2.0",
+    "prettier": "^3.1.0",
+    "@snyk/protect": "^1.1248.0",
+    "ts-mocha": "^10.0.0",
+    "ts-node-dev": "^2.0.0",
+    "ts-sinon": "^2.0.2",
+    "typescript": "^5.2.2"
   }
 }
