adding the yarn.lock for deterministic dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ build
 .DS_Store
 addresses.mainnet.yaml
 addresses.baklava.yaml
-yarn.lock
+#yarn.lock
 docker/mainnet/full-node-data/celo
 docker/mainnet/full-node-data/keystore
 docker/baklava/full-node-data/baklava
